Adding new public/businesses endpoint
